@@ -90,6 +90,8 @@ API Changes
 
 New Features
 
+* LUCENE-7449: Add CROSSES relation support to RangeFieldQuery. (Nick Knize)
+
 * LUCENE-7623: Add FunctionScoreQuery and FunctionMatchQuery (Alan Woodward,
   Adrien Grand, David Smiley)
 
